# jakarta

./: .gitignore  .woodpecker.yml  README.md  generate.py  pyproject.toml
jakarta/: __init__.py  __main__.py  engines.py  generated.py  tool.py
sample/: hello_world.ja  hello_world.py  jakarta.toml  result.txt
templates/: python.mako
tests/: test_basic.py  test_lingva.py  test_mint.py  test_mozhi.py
